# qua-kit

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  qua-server.yaml  qua-view.yaml  specification.tex  stack.yaml
apps/hs/helen/: helen.cabal  stack.yaml
apps/hs/helen/app/: Main.hs
apps/hs/helen/src/Helen/: Core.hs
apps/hs/helen/src/Helen/Core/: Auth.hs  OptParse.hs  Service.hs  Types.hs  Utils.hs
apps/hs/helen/src/Helen/Core/OptParse/: Types.hs
apps/hs/qua-server/: .gitignore  README.md  deploy-stack.sh  deploy.sh  qua-server.cabal  qua-server.sh  stack.yaml
apps/hs/qua-server/app/: devel.hs
apps/hs/qua-server/config/: keter.yaml  keter.yml  models  routes  routes.dev  settings.yml  settingsPostgreSQL.yml  settingsSqlite.yml  test-settings.yml
apps/hs/qua-server/locations/: InsertCountries.hs  InsertPlaces.hs  Main.hs
apps/hs/qua-server/src/: Application.hs  Config.hs  Dispatch.hs  Foundation.hs  Import.hs  Main.hs  Model.hs  Settings.hs
apps/hs/qua-server/src/Application/: Edx.hs  Grading-old.Rmd  Grading-old.html  Grading.R  Grading.Rmd  Grading.hs  Grading.html  SetupProblemData.hs
apps/hs/qua-server/src/Foundation/: Criteria.hs  OAuth.hs
apps/hs/qua-server/src/Handler/: About.hs  Common.hs  Download.hs  Feedback.hs  FindCountry.hs  FindPlace.hs  Home.hs  Image.hs  ImageUpload.hs  ImgPreview.hs  LoggingWS.hs  LuciProxy.hs  Mooc.hs  Preview.hs  QuaViewReviewSettings.hs  QuaViewSettings.hs  Submissions.hs  Viewer.hs
apps/hs/qua-server/src/Handler/Home/: LoadingSplash.hs  LuciConnect.hs  PanelGeometry.hs  PanelInfo.hs  PanelServices.hs  PopupEdxGuide.hs  PopupHelp.hs  PopupSave.hs  UIButtons.hs
apps/hs/qua-server/src/Handler/Mooc/: Admin.hs  BrowseProposals.hs  Comment.hs  CompareProposals.hs  Criteria.hs  EditProposal.hs  EdxLogin.hs  Exercise.hs  ExpertReview.hs  FAQ.hs  ProposalPreview.hs  RenameMe.hs  Reviews.hs  Scenario.hs  ScenarioProblem.hs  SubmissionViewer.hs  SubmitProposal.hs  Survey.hs  Tests.hs  User.hs  ViewProposal.hs
apps/hs/qua-server/src/Import/: BootstrapUtil.hs  NoFoundation.hs  Util.hs
apps/hs/qua-server/src/Model/: CustomTypes.hs  Generated.hs  Rating.hs  Session.hs
apps/hs/qua-server/static/css/: base.min.css  project.min.css  qua-view.css
apps/hs/qua-server/static/data/: mooctask.geojson
apps/hs/qua-server/static/data/run0/: Accessibility.html  Centrality.html  Connectivity.html  Visibility.html  mooctask.geojson
apps/hs/qua-server/static/data/run1/: AccConn.html  Centrality.html  Distribution.html  Visibility.html  mooctask.geojson
apps/hs/qua-server/static/js/: LuciClient.js  misc.js  qua-view.js  qua-worker-loadgeometry.js
apps/hs/qua-server/templates/: default-layout-wrapper.hamlet  default-layout.cassius  home.cassius  home.hamlet  imageUpload.cassius  imageUpload.hamlet  imageUpload.julius  login-ethz.hamlet  login-local.hamlet  preview.cassius  preview.hamlet  qua-view.cassius  qua-view.hamlet  register-local.hamlet  set-password-local.hamlet  site-layout-admin.hamlet  site-layout-full.hamlet  site-layout-minimal.hamlet  site-layout.hamlet  site-menu.hamlet
apps/hs/qua-server/templates/mooc/: admin.hamlet  home.hamlet
apps/hs/qua-server/templates/mooc/admin/: criterion-card.hamlet  criterion-edit.hamlet  criterion-editor.hamlet  exercise-editor.hamlet  review-request.hamlet  scenario-card.hamlet  scenario-edit.hamlet  scenario-editor.hamlet  user-manager.hamlet
config/: README-linux.md  README-mac.md  (+13 more)
libs/hs/ghcjs-hs-interop/: README.md  ghcjs-hs-interop.cabal
libs/hs/ghcjs-hs-interop/jsbits/: LikeHS.js  Tests.js  unsafeRuntime.js
libs/hs/ghcjs-hs-interop/src/: JsHs.hs
libs/hs/ghcjs-hs-interop/src/GHCJS/LikeJS/: Class.hs
libs/hs/ghcjs-hs-interop/src/JsHs/: Array.hs  Callback.hs  Debug.hs  JSString.hs  Nullable.hs  TypedArray.hs  Types.hs
libs/hs/ghcjs-hs-interop/src/JsHs/Internal/: Types.hs
libs/hs/ghcjs-hs-interop/src/JsHs/JSString/: Int.hs  Read.hs  RealFloat.hs  RegExp.hs  Text.hs
libs/hs/ghcjs-hs-interop/src/JsHs/LikeJS/: Class.hs
libs/hs/ghcjs-hs-interop/src/JsHs/TypedArray/: IO.hs  Internal.hs  ST.hs  Types.hs
libs/hs/ghcjs-hs-interop/src/JsHs/Types/: Prim.hs
libs/hs/ghcjs-hs-interop/test/: AllTests.hs
libs/hs/helen/: helen.cabal  stack.yaml
libs/hs/helen/app/: Main.hs
libs/hs/helen/src/Helen/: Core.hs
libs/hs/helen/src/Helen/Core/: Service.hs  Types.hs
libs/hs/ltiv1p1/: ltiv1p1.cabal  stack.yaml
libs/hs/ltiv1p1/src/Web/: LTI.hs
libs/hs/luci-connect/: README.md  luci-connect.cabal  stack.yaml
libs/hs/luci-connect/examples/: AddingNumbersService.hs  DistToWallsService.hs  LuciConsole.hs  LuciTest.hs  MultiParametricService.hs  TutorialService.hs
libs/hs/luci-connect/examples/Lib/: ExtraTypes.hs  ParseGeoJSON.hs  Region.hs  Scenario.hs
libs/hs/luci-connect/src/: LuciClient.hs
libs/hs/luci-connect/src/Luci/: Connect.hs  Messages.hs
libs/hs/luci-connect/src/Luci/Connect/: Base.hs  Internal.hs  UsefulOrphans.hs
libs/hs/qua-types/: README.md  qua-types.cabal  stack.yaml
libs/hs/qua-types/src/: QuaTypes.hs  Types.hs
libs/hs/qua-types/src/QuaTypes/: Commons.hs  Review.hs  Submission.hs
libs/hs/reactive-banana-ghcjs/: README.md  closure-compile.sh  reactive-banana-ghcjs.cabal  test.html  test.js  testNoHs.html  uploadia.sh
libs/hs/reactive-banana-ghcjs/jsbits/: ReactiveBanana.js  pep.js
libs/hs/reactive-banana-ghcjs/src/Reactive/Banana/: JsHs.hs
libs/hs/reactive-banana-ghcjs/test/: test.hs
services/examples-hs/: LICENSE  README.md  examples-hs.cabal  stack.yaml
services/examples-hs/src/: hs-example-service.hs
services/examples-hs/src/Lib/: ExtraTypes.hs  ParseGeoJSON.hs  Scenario.hs
services/siren/: LICENSE  README.md  siren.cabal  sirenDBconfigure.sql  sirenDBcreate.sql  spatialQuery.sql  stack.yaml
services/siren/app/: Main.hs
services/siren/sql/: copy_scenario.sql  create_scenario.sql  delete_scenario.sql  dropdb.sql  get_last_sc_update.sql  get_scenario.sql  list_scenarios.sql  populatedb.sql  recover_scenario.sql  update_scenario.sql  wrap_result.sql
services/siren/src/: Lib.hs
services/siren/src/Lib/: Model.hs
(+52 files in other folders)
