name: examples-hs
version: 1.0.2.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/qua-kit
bug-reports: https://github.com/achirkin/qua-kit/issues
synopsis: Example service to run with qua-kit
description:
    Example service to run with qua-kit
category: Network
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/qua-kit.git


executable hs-example-service

    main-is: hs-example-service.hs
    other-modules:
        Lib.Scenario
        Lib.ExtraTypes
        Lib.ParseGeoJSON
        Lib.Region
    build-depends:
        base >=4.8.2 && <5,
        aeson -any,
        text -any,
        vector -any,
        conduit -any,
        conduit >=1.2.6.6,
        unordered-containers >=0.2.7.0,
        bytestring >=0.10.6.0,
        easytensor -any,
        geojson -any,
        lens -any,
        luci-connect -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -ferror-spans -O2 -fenable-rewrite-rules

