name:                siren
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Scenario service for Luci/Helen.
homepage:            https://github.com/achirkin/siren#readme
license:             MIT
license-file:        LICENSE
author:              Artem Chirkin
maintainer:          chirkin@arch.ethz.ch
copyright:           (c) Artem Chirkin
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Lib.Model
  build-depends:       base >= 4.9 && < 5,
                       bytestring -any,
                       text -any,
                       persistent -any,
                       persistent-template -any,
                       template-haskell -any,
                       persistent-postgresql -any,
                       aeson -any,
                       monad-logger >=0.3.19
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-tabs

executable siren-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:       base
                     , siren
  default-language:    Haskell2010

test-suite siren-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , siren
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/achirkin/siren
