name: helen
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/qua-kit
bug-reports: https://github.com/achirkin/qua-kit/issues
synopsis: Haskell Elementary Networking for qua-kit
description:
    Haskell Elementary Networking for qua-kit
    is a substitute for Luci with reduced functionality
    required by qua-kit.
category: Network
author: Artem Chirkin

library
    exposed-modules:
        Helen.Core
        Helen.Core.Auth
        Helen.Core.Service
        Helen.Core.Service.Startup
        Helen.Core.Service.Information
        Helen.Core.Service.Registration
        Helen.Core.Types
        Helen.Core.Utils
    build-depends:
        base >=4.8 && <5,
        text -any,
        bytestring >=0.10.6.0,
        aeson -any,
        transformers -any,
        mtl -any,
        conduit >=1.0.0,
        luci-connect -any,
        monad-control -any,
        network -any,
        conduit-extra -any,
        unordered-containers -any,
        stm -any,
        hashable -any,
        transformers-base -any,
        monad-logger -any,
        fast-logger -any,
        cryptonite -any,
        lens -any,
        containers >=0.5.6.2,
        time >=1.4,
        path -any,
        path-io -any,
        yaml -any,
        process -any,
        iproute -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -ferror-spans

executable helen
    main-is: Main.hs
    build-depends:
        base >=4.8.2 && <5,
        aeson -any,
        text -any,
        bytestring >=0.10.6.0,
        conduit -any,
        luci-connect >=1.0.1,
        helen -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -Wall -ferror-spans
