name: qua-server
version: 0.1
cabal-version: >=1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/qua-kit
bug-reports: https://github.com/achirkin/qua-kit/issues
synopsis: Quick Urban Analysis Kit - server
description:
    Quick Urban Analysis server does the logging and authentification of qua-kit users.
    Many thanks to yesodweb group for project and templates!
category: Web
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/qua-kit.git

flag dev
    description:
        Turn on development settings, like auto-reload templates.
    default: False

flag library-only
    description:
        Build for use with "yesod devel"
    default: False

library
    
    if (flag(dev) || flag(library-only))
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -fwarn-tabs -O0
    else
        ghc-options: -Wall -fwarn-tabs -O2
    exposed-modules:
        Application
        Foundation
        Handler.Common
        Handler.Home
        Handler.Home.LoadingSplash
        Handler.Home.PopupHelp
        Handler.Home.PopupSave
        Handler.Home.UIButtons
        Handler.LuciProxy
        Handler.QuaViewSettings
        Import
        Import.NoFoundation
        Model
        Settings
        Settings.StaticFiles
    build-depends:
        base >=4 && <5,
        yesod >=1.4.3 && <1.5,
        yesod-core >=1.4.17 && <1.5,
        yesod-auth >=1.4.0 && <1.5,
        yesod-static >=1.4.0.3 && <1.6,
        yesod-form >=1.4.0 && <1.5,
        yesod-websockets -any,
        classy-prelude >=0.10.2,
        classy-prelude-conduit >=0.10.2,
        classy-prelude-yesod >=0.10.2,
        bytestring >=0.9 && <0.11,
        text >=0.11 && <2.0,
        persistent >=2.0 && <2.6,
        persistent-sqlite >=2.1.1 && <2.6,
        persistent-template >=2.0 && <2.6,
        template-haskell -any,
        shakespeare >=2.0 && <2.1,
        hjsmin >=0.1 && <0.3,
        monad-control >=0.3 && <1.1,
        wai-extra >=3.0 && <3.1,
        yaml >=0.8 && <0.9,
        http-conduit >=2.1 && <2.2,
        directory >=1.1 && <1.3,
        warp >=3.0 && <3.3,
        data-default -any,
        aeson >=0.6 && <0.12,
        conduit >=1.0 && <2.0,
        conduit-extra >=1.0 && <2.0,
        monad-logger >=0.3 && <0.4,
        fast-logger >=2.2 && <2.5,
        wai-logger >=2.2 && <2.3,
        file-embed -any,
        safe -any,
        unordered-containers -any,
        containers -any,
        vector -any,
        time -any,
        case-insensitive -any,
        wai -any,
        stm -any
    default-language: Haskell2010
    default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                        NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
                        GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
                        EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
                        ViewPatterns TupleSections RecordWildCards
    hs-source-dirs: src

executable qua-server
    
    if flag(library-only)
        buildable: False
    main-is: main.hs
    build-depends:
        base -any,
        qua-server -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        qua-server -any,
        yesod-test >=1.5.0.1 && <1.6,
        yesod-core -any,
        yesod -any,
        persistent -any,
        persistent-sqlite -any,
        resourcet -any,
        monad-logger -any,
        shakespeare -any,
        transformers -any,
        hspec >=2.0.0,
        classy-prelude -any,
        classy-prelude-yesod -any,
        aeson -any
    default-language: Haskell2010
    default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                        NoImplicitPrelude CPP MultiParamTypeClasses TypeFamilies GADTs
                        GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
                        EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
                        ViewPatterns TupleSections
    hs-source-dirs: test
    other-modules:
        Handler.CommonSpec
        Handler.HomeSpec
        TestImport
    ghc-options: -Wall
