name: qua-server
version: 0.1
cabal-version: >=1.22
build-type: Custom
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/qua-kit
bug-reports: https://github.com/achirkin/qua-kit/issues
synopsis: Quick Urban Analysis Kit - server
description:
    Quick Urban Analysis server does the logging and authentification of qua-kit users.
    Many thanks to yesodweb group for project and templates!
category: Web
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/qua-kit.git

flag dev
    description:
        Turn on development settings, like auto-reload templates.
    default: False

flag library-only
    description:
        Build for use with "yesod devel"
    default: False

flag postgresql
    default: True
    description:
        Use PostgreSQL database. Otherwise use sqlite.

custom-setup
    setup-depends:
        base >=4.8 && <5,
        Cabal >=1.22,
        superdoc >=0.1.2

library

    if flag(postgresql)
        cpp-options: -DPOSTGRESQL

    if (flag(dev) || flag(library-only))
        cpp-options: -DDEVELOPMENT
        ghc-options: -Wall -fwarn-tabs -O0
    else
        ghc-options: -Wall -fwarn-tabs -O2

    if flag(postgresql)
        build-depends:
            persistent-postgresql -any
    else
        build-depends:
            persistent-sqlite -any
    exposed-modules:
        Application
        Application.Edx
        Application.Grading
        Application.SetupProblemData
        Foundation
        Handler.About
        Handler.Common
        Handler.Feedback
        Handler.LoggingWS
        Handler.LuciProxy
        Handler.Mooc
        Handler.Mooc.Admin
        Handler.Mooc.Admin.CriterionEditor
        Handler.Mooc.Admin.ReviewRequest
        Handler.Mooc.Admin.ScenarioEditor
        Handler.Mooc.Admin.UserManager
        Handler.Mooc.Admin.LuciScenarioDownloader
        Handler.Mooc.BrowseProposals
        Handler.Mooc.Reviews
        Handler.Mooc.CompareProposals
        Handler.Mooc.Criteria
        Handler.Mooc.EdxLogin
        Handler.Mooc.ExpertReview
        Handler.Mooc.ProposalPreview
        Handler.Mooc.RenameMe
        Handler.Mooc.Exercise
        Handler.Mooc.Survey
        Handler.Mooc.Tests
        Handler.Mooc.User
        Handler.Mooc.FAQ
        Handler.QuaViewReviewSettings
        Handler.QuaViewSettings
        Handler.Submissions
        Import
        Import.NoFoundation
        Import.Util
        Import.BootstrapUtil
        Model
        Model.CustomTypes
        Model.Generated
        Model.Session
        Settings
        Settings.StaticFiles
    build-depends:
        authenticate-oauth >= 1.6,
        base >=4 && <5,
        cryptonite,
        yesod >=1.4.3,
        yesod-core >=1.4.17,
        yesod-auth >=1.4.17,
        yesod-static >=1.4.0.3,
        yesod-form >=1.4.0,
        yesod-websockets -any,
        yesod-auth-ldap-native >=0.2.0.0,
        mime-mail >=0.4,
        transformers >=0.4.2.0,
        ldap-client >=0.1.0,
        luci-connect -any,
        lens -any,
        classy-prelude >=0.10.2,
        classy-prelude-conduit >=0.10.2,
        classy-prelude-yesod >=0.10.2,
        blaze-markup >=0.7.1,
        bytestring >=0.9,
        base64-bytestring -any,
        text >=0.11,
        persistent >=2.0,
        persistent-template >=2.0,
        template-haskell -any,
        shakespeare >=2.0,
        hjsmin >=0.1 && <0.3,
        monad-control >=0.3,
        wai-extra >=3.0,
        yaml >=0.8,
        http-conduit >=2.1,
        directory >=1.1,
        warp >=3.0,
        data-default -any,
        aeson >=0.6,
        conduit >=1.0,
        conduit-extra >=1.0,
        monad-logger >=0.3,
        fast-logger >=2.2,
        wai-logger >=2.2,
        file-embed -any,
        safe -any,
        unordered-containers -any,
        containers -any,
        vector -any,
        time -any,
        case-insensitive -any,
        wai -any,
        stm -any,
        random -any,
        ltiv1p1 -any,
        esqueleto -any,
        resource-pool -any,
        qua-types >= 0.1
    default-language: Haskell2010
    default-extensions: TemplateHaskell QuasiQuotes OverloadedStrings
                        NoImplicitPrelude MultiParamTypeClasses TypeFamilies GADTs
                        GeneralizedNewtypeDeriving FlexibleContexts FlexibleInstances
                        EmptyDataDecls NoMonomorphismRestriction DeriveDataTypeable
                        ViewPatterns TupleSections RecordWildCards
    hs-source-dirs: src

executable qua-server

    if flag(postgresql)
        cpp-options: -DPOSTGRESQL

    if flag(library-only)
        buildable: False
    main-is: main.hs
    build-depends:
        base -any,
        qua-server -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
