name: ghcjs-hs-interop
version: 0.0.1
cabal-version: 1.22
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Artem Chirkin
maintainer: Artem Chirkin
stability: experimental
homepage: http://ia.arch.ethz.ch/achirkin
bug-reports: mailto:chirkin@arch.ethz.ch
synopsis: A set of tools for easier interoperobility between Haskell and JS
description:
    A set of tools for easier interoperobility between Haskell and JS
category: OpenGL, WebGL
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/qua-kit
    subdir: libs/hs/ghcjs-hs-interop

library
    exposed-modules:
        JsHs
        JsHs.Array
        JsHs.Callback
        JsHs.Debug
        JsHs.JSString
        JsHs.JSString.Int
        JsHs.JSString.Read
        JsHs.JSString.RealFloat
        JsHs.JSString.RegExp
        JsHs.JSString.Text
        JsHs.LikeJS.Class
        JsHs.Nullable
        JsHs.Types
        JsHs.Types.Prim
        JsHs.TypedArray
        JsHs.TypedArray.IO
        JsHs.TypedArray.ST
    build-tools: cpphs
    build-depends:
        base -any,
        ghc-prim -any,
        ghcjs-base -any,
        ghcjs-prim -any,
        deepseq -any,
        primitive -any
    cpp-options: -DGHCJS_BROWSER
    js-sources:
        jsbits/LikeHS.js
        jsbits/unsafeRuntime.js
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        JsHs.Internal.Types
        JsHs.TypedArray.Types
        JsHs.TypedArray.Internal
    ghc-options: -Wall -ferror-spans -O2

test-suite AllTests
    type: exitcode-stdio-1.0
    main-is: AllTests.hs
    build-depends:
        base -any,
        ghc-prim -any,
        ghcjs-base -any,
        ghcjs-prim -any,
        HTF -any,
        deepseq -any,
        template-haskell -any,
        primitive -any
    js-sources:
        jsbits/LikeHS.js
        jsbits/Tests.js
        jsbits/unsafeRuntime.js
    default-language: Haskell2010
    hs-source-dirs: src test
    other-modules:
        JsHs.LikeJS.Test.TestBasicTypes
        JsHs.LikeJS.Test.TestCommonContainers
        JsHs.LikeJS.Test.TestTypedArrays
        JsHs.LikeJS.Test.TH
        JsHs.Nullable
    ghc-options: -Wall -ferror-spans -O2
