name: helen
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/qua-kit
bug-reports: https://github.com/achirkin/qua-kit/issues
synopsis: Haskell Elementary Networking for qua-kit
description:
    Haskell Elementary Networking for qua-kit
    is a substitute for Luci with reduced functionality
    required by qua-kit.
category: Network
author: Artem Chirkin

library
    exposed-modules:
        Helen.Core
    build-depends:
        base >=4.8 && <5,
        text -any,
        bytestring >=0.10.6.0,
        aeson -any,
        transformers -any,
        mtl -any,
        conduit >=1.0.0 && <1.3,
        luci-connect -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -ferror-spans

executable helen
    main-is: Main.hs
    build-depends:
        base >=4.8.2 && <4.9,
        aeson -any,
        text -any,
        bytestring >=0.10.6.0,
        conduit >=1.0.0 && <1.3,
        luci-connect -any,
        helen -any
    default-language: Haskell2010
    hs-source-dirs: app
    other-modules:
    ghc-options: -Wall -ferror-spans

