name: ltiv1p1
version: 0.9
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
synopsis: Service provider implementation for IMS Global Learning Tools Interoperability™ 1.1
description:
    Partial implementation of a service provider for LTI 1.1.
    Mean to be used for LTI components at edX

library
    exposed-modules:
        Web.LTI
    build-depends:
        base -any,
        bytestring >=0.10.6.0 && <0.11,
        xml-hamlet >=0.4.0.11 && <0.5,
        xml-conduit >=1.3.4 && <1.4,
        text >=1.2.2.0 && <1.3,
        authenticate-oauth >=1.5.2 && <1.6,
        containers >=0.5.6.2 && <0.6,
        http-client >=0.4.27 && <0.5,
        http-types >=0.9 && <0.10,
        transformers >=0.4.2.0 && <0.5,
        blaze-builder >=0.4.0.1 && <0.5,
        wai >=3.2.0 && <3.3,
        wai-extra >=3.0.7,
        time >=1.5.0.1 && <1.6,
        random >=1.1 && <1.2,
        data-default >=0.5.3 && <0.6,
        yesod-core >=1.4.19 && <1.5
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall -ferror-spans

