name: luci-connect
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Artem Chirkin
maintainer: Artem Chirkin
stability: experimental
homepage: https://bitbucket.org/treyerl/luci2
synopsis: implement luci communication protocol
category: Network
author: Artem Chirkin

library
    exposed-modules:
        Luci.Connect
        Luci.Connect.Base
        Luci.Messages
    build-depends:
        base >=4.8.2 && <4.9,
        conduit -any,
        conduit-extra -any,
        binary >=0.8.1,
        cryptonite -any,
        resourcet -any,
        bytestring -any,
        text -any,
        aeson -any,
        unordered-containers -any,
        transformers -any,
        geojson -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Luci.Connect.Internal
    ghc-options: -Wall -ferror-spans

executable luci-client
    main-is: LuciClient.hs
    build-depends:
        base >=4.8.2 && <4.9,
        conduit -any,
        conduit-extra -any,
        binary >=0.8.1,
        cryptonite -any,
        resourcet -any,
        bytestring -any,
        text -any,
        aeson -any,
        unordered-containers -any,
        transformers -any,
        geojson -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Luci.Connect.Base
        Luci.Connect.Internal
        Luci.Messages
    ghc-options: -Wall -ferror-spans

