name: luci-connect
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Artem Chirkin
maintainer: Artem Chirkin
stability: experimental
homepage: https://bitbucket.org/treyerl/luci2
synopsis: implement luci communication protocol
category: Network
author: Artem Chirkin

library
    exposed-modules:
        Luci.Connect
        Luci.Connect.Base
        Luci.Connect.UsefulOrphans
        Luci.Messages
    build-depends:
        base >=4.8.2 && <4.9,
        conduit >=1.0.0 && <1.3,
        conduit-extra -any,
        monad-control -any,
        binary >=0.8.1,
        primitive -any,
        cryptonite -any,
        resourcet -any,
        bytestring >=0.10.6.0,
        base64-bytestring -any,
        text -any,
        aeson -any,
        unordered-containers -any,
        transformers -any,
        transformers-base -any,
        monad-logger -any,
        streaming-commons -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Luci.Connect.Internal
    ghc-options: -Wall -ferror-spans

executable luci-client
    main-is: LuciClient.hs
    build-depends:
        base >=4.8.2 && <4.9,
        conduit >=1.0.0 && <1.3,
        conduit-extra -any,
        monad-control -any,
        binary >=0.8.1,
        primitive -any,
        cryptonite -any,
        resourcet -any,
        bytestring >=0.10.6.0,
        base64-bytestring -any,
        text -any,
        aeson -any,
        unordered-containers -any,
        transformers -any,
        transformers-base -any,
        monad-logger -any,
        streaming-commons -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Luci.Connect
        Luci.Connect.Base
        Luci.Connect.UsefulOrphans
        Luci.Messages
    ghc-options: -Wall -ferror-spans

