name: luci-connect
version: 1.0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Artem Chirkin
maintainer: Artem Chirkin <chirkin@arch.ethz.ch>
stability: experimental
homepage: https://github.com/achirkin/qua-kit
bug-reports: https://github.com/achirkin/qua-kit/issues
synopsis: Implement luci communication protocol
description:
    Implement luci communication protocol
    https://bitbucket.org/treyerl/luci2 .
    See the module documentation and README for more information.
category: Network
author: Artem Chirkin

source-repository head
    type: git
    location: https://github.com/achirkin/qua-kit.git

flag luci-test
    description:
        Build the luci binary protocol testing program.

flag examples
    description:
        Build example executables.
    default: False

library
    exposed-modules:
        Luci.Connect
        Luci.Connect.Base
        Luci.Messages
    build-depends:
        base >=4.8.2 && <4.9,
        conduit >=1.0.0,
        conduit-extra -any,
        monad-control -any,
        binary >=0.8.1,
        primitive -any,
        cryptonite -any,
        resourcet -any,
        bytestring >=0.10.6.0,
        base64-bytestring -any,
        text -any,
        aeson -any,
        unordered-containers -any,
        transformers -any,
        transformers-base -any,
        monad-logger -any,
        streaming-commons -any,
        mtl -any,
        time -any,
        hashable -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Luci.Connect.Internal
    ghc-options: -Wall -ferror-spans

executable luci-test

    if !flag(luci-test)
        buildable: False
    main-is: LuciTest.hs
    build-depends:
        base >=4.8.2 && <4.9,
        aeson -any,
        text -any,
        bytestring >=0.10.6.0,
        conduit >=1.0.0,
        luci-connect -any
    default-language: Haskell2010
    hs-source-dirs: examples
    ghc-options: -Wall -ferror-spans

executable luci-console

    if !flag(examples)
        buildable: False
    main-is: LuciConsole.hs
    build-depends:
        base >=4.8.2 && <4.9,
        aeson -any,
        text -any,
        bytestring >=0.10.6.0,
        conduit >=1.0.0,
        conduit-extra -any,
        luci-connect -any
    default-language: Haskell2010
    hs-source-dirs: examples
    ghc-options: -Wall -ferror-spans

executable adding-numbers-service

    if !flag(examples)
        buildable: False
    main-is: AddingNumbersService.hs
    build-depends:
        base >=4.8.2 && <4.9,
        aeson -any,
        text -any,
        luci-connect -any
    default-language: Haskell2010
    hs-source-dirs: examples
    ghc-options: -Wall -ferror-spans

executable dist-walls-service

    if !flag(examples)
        buildable: False
    main-is: DistToWallsService.hs
    build-depends:
        base >=4.8.2 && <4.9,
        aeson -any,
        text -any,
        vector -any,
        conduit -any,
        conduit >=1.2.6.6,
        unordered-containers >=0.2.7.0,
        bytestring >=0.10.6.0,
        fastvec -any,
        geojson -any,
        lens -any,
        luci-connect -any
    default-language: Haskell2010
    hs-source-dirs: examples
    ghc-options: -Wall -ferror-spans -fllvm -O2 -fenable-rewrite-rules

