name:                qua-types
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Types
  default-language:    Haskell2010
  if impl(ghcjs)
      build-depends:
          ghcjs-base >=0.2.0.0,
          base >= 4.8 && < 5,
          text >=1.2.0.0
  else
      build-depends:
          aeson >= 1.0.2,
          base >= 4.8 && < 5,
          text >=1.2.0.0
