name:                qua-types
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Mauro Bieg, Artem Chirkin
maintainer:          example@example.com
copyright:           2017 Artem Chirkin
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     QuaTypes,
                       QuaTypes.Review,
                       QuaTypes.Submission
  other-modules:
                       QuaTypes.Commons
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5
                     , time >= 0.1.0.0
  if impl(ghcjs)
    build-depends:     ghcjs-base >= 0.2.0.0
  else
    build-depends:     aeson >= 1.0.2
                     , text >= 1.2.0.0
